# mlflow-demo

./: .env.template  .gitignore  CLAUDE.md  DEV.md  README.md  app.yaml  app.yaml.template  check.sh  deploy.sh  fix.sh  load_sample_data.sh  monitor_deployment.sh  pyproject.toml  requirements.txt  setup.sh  start_prod.sh  watch.sh
.claude/agents/: notebook-test-fixer.md  notebook-validator.md
client/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/public/: index.html
client/src/: App.tsx  endpoints.ts  index.css  index.tsx  routes.ts
client/src/components/: Spinner.tsx  app-sidebar.tsx  code-snippet.tsx  collapsible-section.tsx  demo-overview.tsx  markdown-content.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-steps.tsx  nav-user.tsx  notebook-reference.tsx  prompt-registry.tsx  step-layout.tsx
client/src/components/demo-pages/: business-metrics.tsx  create-quality-metrics.tsx  find-fix-quality-issues.tsx  human-review.tsx  observe-with-tracing.tsx  prod-monitoring.tsx
client/src/components/email-generator/: CompanySearch.tsx  CustomerDataRetriever.tsx  CustomerForm.tsx  EmailDisplay.tsx  EmailGenerator.tsx
client/src/components/ui/: button.tsx  sidebar.tsx
client/src/queries/: useQueryAgent.tsx  useQueryFixedPrompt.tsx  useQueryNotebookUrl.tsx  useQueryPreloadedResults.tsx  useQueryTracing.tsx
mlflow_demo/: __init__.py
mlflow_demo/agent/: __init__.py  email_generator.py  prompts.py
mlflow_demo/data/: __init__.py
mlflow_demo/evaluation/: __init__.py  evaluator.py
mlflow_demo/notebooks/: 1_observe_with_traces.ipynb  2_create_quality_metrics.ipynb  3_find_fix_quality_issues.ipynb  4_human_review.ipynb  5_production_monitoring.ipynb
mlflow_demo/utils/: __init__.py  mlflow_helpers.py
scripts/: generate_notebook_urls.py  generate_semver_requirements.py  make_fastapi_client.py
server/: app.py  make_openapi.py
server/routes/: email.py  helper.py
setup/: 1_load_prompts.py  2_load_sample_traces.py  3_run_evals_for_sample_traces.py  4_setup_monitoring.py  5_setup_labeling_session.py  input_data.jsonl  notebook_log_generator.py  use_app_locally.py
